Made a change in the SingUp form for the age column  select "number"

--- a/form.html
+++ b/form.html
@@ -44,7 +44,7 @@
         <input id="email-field" name="email" class="input" type="email" placeholder="E-mail" required>
         <input id="phone-field" name="phone" class="input" type="tel" placeholder="Phone" required>
         <input id="sex-field" name="sex" class="input" type="text" placeholder=" Sex">
-        <input id="age=field" name="age" class="input" type="text" placeholder="Age">
+        <input id="age=field" name="age" class="input" type="number" placeholder="Age">
         <input id="bike-field" name="bike" class="input" type="text" placeholder="Bike">
         <button class="btn" type="submit">Sign Up</button>
       </form>
