--- a/gallery.html
+++ b/gallery.html
@@ -41,27 +41,27 @@
 	      <article>
 	        <div class="info top-left">
 	          <h3>Slide 1</h3></div>
-	        <img src="https://i.ibb.co/qWbzHnQ/DSC-4905.jpg" alt="4905">
+	        <img src="https://i.ibb.co/y8Jf5Zd/DSC-4908.jpg" alt="DSC-4908">
 	      </article>
 	      <article>
 	        <div class="info bottom-right">
 	          <h3>Slide 2</h3></div>
-	        <img src="https://i.ibb.co/JnP0Y05/DSC-3529.jpg" alt="3529">
+	        <img src="https://i.ibb.co/b1nq4qz/DSC-3529.jpg" alt="DSC-3529">  
 	      </article>
 	      <article>
 	        <div class="info bottom-left">
 	          <h3>Slide 3</h3></div>
-	        <img src="https://i.ibb.co/cb8fRFq/DSC-1889.jpg" alt="1889">
+	        <img src="https://i.ibb.co/rtWpLTZ/DSC-6100.jpg" alt="DSC-6100">  
 	      </article>
 	      <article>
 	        <div class="info top-right">
 	          <h3>Slide 4</h3></div>
-	        <img src="https://i.ibb.co/hmQrLB1/DSC-6245.jpg" alt=6245>
+	        <img src="https://i.ibb.co/fkbS6vb/DSC-6242.jpg" alt=DSC-6242>
 	      </article>
         <article>
 	        <div class="info top-right">
 	          <h3>Slide 5</h3></div>
-	        <img src="https://i.ibb.co/p45thCy/DSC-6267.jpg" alt=6267>
+	        <img src="https://i.ibb.co/vvZR6dv/DSC-3317.jpg" alt=DSC-3317>
 	      </article>
 	    </div>
 	  </div>
@@ -82,8 +82,8 @@
 	</div>
 </div>
   <div class="pictures">
-<a class="pictures-img" href="https://ibb.co/VYS87mZ" target="_blank"><img src="https://i.ibb.co/r26JCsS/Untitled-2.jpg" alt="Untitled-2"></a>
-<a class="pictures-img" href="https://ibb.co/ZdCtQtW" target="_blank"><img src="https://i.ibb.co/JnP0Y05/DSC-3529.jpg" alt="DSC-3529"></a>
+<a class="pictures-img" href="https://ibb.co/VYS87mZ" target="_blank"><img src="https://i.ibb.co/r26JCsS/by-the-sea.jpg" alt="by-the-sea"></a>
+<a class="pictures-img" href="https://ibb.co/ZdCtQtW" target="_blank"><img src="https://i.ibb.co/b1nq4qz/DSC-3529.jpg" alt="DSC-3529"></a>
 <a class="pictures-img" href="https://ibb.co/drVdwQx" target="_blank"><img src="https://i.ibb.co/hy4PJKw/Untitled-4.jpg" alt="Untitled-4"></a>
 <a class="pictures-img" href="https://ibb.co/kDPcQ7z" target="_blank"><img src="https://i.ibb.co/myPz6jd/Untitled-3.jpg" alt="Untitled-3"></a>
 <a class="pictures-img" href="https://ibb.co/WVPWpDf" target="_blank"><img src="https://i.ibb.co/sW6vJ5q/IMG-0127.jpg" alt="IMG-0127"></a>
