Updating screenshots of Lighthouse in README

--- a/about.html
+++ b/about.html
@@ -27,11 +27,10 @@
             <li><a href="form.html"><h3 style="color: red">SignUp</h3></a></li>
           </ul>
         </nav>
-         
-
-     </header>
-  <div><img class="goblin" src="assets/images/goblinshow.jpg" alt="goblinshow">
-  </div>
+         </div>
+</header>
+  <img class="goblin" src="assets/images/goblinshow.jpg" alt="goblinshow">
+  
 
   
 <div style="background-color: #b4f4caff;" class="div2">
