Added logo to webpage "helmet"

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 	<meta name="author" content="BIKERS">
 	<link rel="stylesheet" href="style.css">
 <title>Meeting</title>
-</head>
+  
+
+<link rel="shortcut icon" type="image/png" href="assets/images/helmet.png"/>
+
+
+ 
+ </head>
+  
 <body>
     <header>
     <div class="container">
