website logo update.

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="BIKERS">
 	<link rel="stylesheet" href="style.css">
 <title>Meeting</title>
-  <link rel="shortcut icon" type="image/png" href="assets/images/helmet.png"/>
+  <link rel="shortcut icon" type="image/png" href="assets/images/helmet.png">
 </head>
 <body>
 <header>
