--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="style.css" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css">
 <title>Gallery</title>
-<link rel="shortcut icon" type="image/png" href="assets/images/helmet.png"/>
+<link rel="shortcut icon" type="image/png" href="assets/images/helmet.png">
 </head>
 <body class="body">
   <header>
