--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <title>Meeting</title>
   
 
-<link rel="shortcut icon" type="image/png" href="assets/images/helmet.png"/>
+<link rel="shortcut icon" type="image/png" href="assets/images/helmet.png">
 
 
  
