--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
   <meta name="keywords" content="bike-show, bike, moto-rock, bikers, Ukraine, motorcycles">
 	<meta name="author" content="BIKERS">
 	<link rel="stylesheet" href="style.css">
-<title>Meeting</title>
-  <link rel="shortcut icon" type="image/png" href="assets/images/helmet.png">
+<title>AboutUs</title>
+<link rel="shortcut icon" type="image/png" href="assets/images/helmet.png">
 </head>
 <body>
 <header>
