--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="bike-show, bike, moto-rock, bikers, Ukraine, motorcycles">
 	<meta name="author" content="BIKERS">
 	<link rel="stylesheet" href="style.css">
-<title>Meeting</title>
+<title>Home</title>
   
 
 <link rel="shortcut icon" type="image/png" href="assets/images/helmet.png">
