--- a/gallery.html
+++ b/gallery.html
@@ -116,7 +116,7 @@
         <li><a href="http://www.google.com" target="_blank">Team</a></li>
         <li><a href="index.html#schedule">Contact</a></li>
   </ul>
-    <p>©2022 Online Tutorials | All Rights Reserved</p>
+    <p>©Copyright 2022 | All Rights Reserved</p>
 </footer>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
