Image chenge rezolution

--- a/gallery.html
+++ b/gallery.html
@@ -52,8 +52,8 @@
 	      <article>
 	        <div class="info bottom-left">
 	          <h3>Slide 3</h3></div>
-	        <img src="https://i.ibb.co/rtWpLTZ/DSC-6100.jpg" alt="DSC-6100">  
-	      </article>
+	        <img src="https://i.ibb.co/cCyzxST/DSC-7712.jpg" alt="DSC-7712">  
+	      </article>       
 	      <article>
 	        <div class="info top-right">
 	          <h3>Slide 4</h3></div>
