Changed image resolution in the gallery

--- a/gallery.html
+++ b/gallery.html
@@ -87,7 +87,7 @@
 <a class="pictures-img" href="https://ibb.co/ZdCtQtW" target="_blank"><img src="https://i.ibb.co/b1nq4qz/DSC-3529.jpg" alt="DSC-3529"></a>
 <a class="pictures-img" href="https://ibb.co/drVdwQx" target="_blank"><img src="https://i.ibb.co/hy4PJKw/Untitled-4.jpg" alt="Untitled-4"></a>
 <a class="pictures-img" href="https://ibb.co/kDPcQ7z" target="_blank"><img src="https://i.ibb.co/myPz6jd/Untitled-3.jpg" alt="Untitled-3"></a>
-<a class="pictures-img" href="https://ibb.co/WVPWpDf" target="_blank"><img src="https://i.ibb.co/sW6vJ5q/IMG-0127.jpg" alt="IMG-0127"></a>
+<a class="pictures-img" href="https://ibb.co/0YvgsPt" target="_blank"><img src="https://i.ibb.co/gth54sV/DSC-6267.jpg" alt="DSC-6267"></a>
 <a class="pictures-img" href="https://ibb.co/MSWCvnY" target="_blank"><img src="https://i.ibb.co/xLP7khp/DSC-8014.jpg" alt="DSC-8014"></a>
 <a class="pictures-img" href="https://ibb.co/0FnPQRJ" target="_blank"><img src="https://i.ibb.co/Sd6qJ4v/DSC-7712.jpg" alt="DSC-7712"></a>
 <a class="pictures-img" href="https://ibb.co/XLYN5X8" target="_blank"><img src="https://i.ibb.co/T2Wp0cL/DSC-6317.jpg" alt="DSC-6317"></a>
